--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p>Lorem ipsum dolor sit amet consectetur. <br> Lorem ipsum dolor sit amet.  Lorem ipsum dolor sit.</p>
     
         </div>
-        <img class="logo" src="/logo.png" alt="">
+        <img class="logo" src="logo.png" alt="">
 
 
     </section>
