--- a/index.html
+++ b/index.html
@@ -18,16 +18,19 @@
             </ul>
             <input class="search" type="search" title="search" placeholder="  search">
 
+        </div> 
+        <div class="logo0">
+            <img class="logo" src="logo.png" alt="">
+
         </div>
         <div class="text">
             <h1>
                 Hi, <br>
-                I'm Naymur Rahman Naym
+                I'm, Naymur Rahman Naym
             </h1>
             <p>Lorem ipsum dolor sit amet consectetur. <br> Lorem ipsum dolor sit amet.  Lorem ipsum dolor sit.</p>
     
         </div>
-        <img class="logo" src="logo.png" alt="">
 
 
     </section>
